@@ -24,6 +24,7 @@ requests from users, including:
   Michael Donohue
   Rex Dwyer
   Melanie Edwards
+  Adam Elder
   Hannah Evans
   Francisco Fabuel
   Boris Fazio
