@@ -75,6 +75,8 @@
 
 	svyglm() has clearer error message when the subset= argument contains NAs (for Pam Shaw)
 
+	regTermTest was dropping the first term for coxph() models (Adam Elder)
+
 4.0	Some (and eventually nearly all) functions now return influence functions when
 	called with a survey.design2 object and the influence=TRUE option.  These allow
 	svyby() to estimate covariances between domains, which could previously only be
